<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/cvAddHouses"

        android:backgroundTint="#4CAF50"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        app:cardCornerRadius="30dp"
        android:layout_height="300dp">
        <LinearLayout
            android:weightSum="10"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.3">

                <TextView
                    android:id="@+id/txtTitle_dialog_add_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/housesSystem_add_layout_main_title"
                    android:textSize="24dp" />

            </LinearLayout>

            <LinearLayout
                android:weightSum="5"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7">

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/edtGetHousesName"
                        android:drawableLeft="@drawable/mini_icon_name"
                        android:hint="@string/housesSystem_add_layout_title_name"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:layout_weight="2">
                    <EditText
                        android:id="@+id/edtGetHousesLocation"
                        android:drawableLeft="@drawable/mini_icon_location"
                        android:hint="@string/housesSystem_add_layout_title_location"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1.7">

                <Button
                    android:id="@+id/btnAddHouses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3B883E"
                    android:text="@string/housesSystem_add_layout_button_add"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3B883E"
                    android:text="@string/general_cancel"
                    android:textColor="@color/white" />
            </LinearLayout>









        </LinearLayout>





    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginTop="15dp"
        android:layout_below="@+id/cvAddHouses"
        android:backgroundTint="#F1D379"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        app:cardCornerRadius="30dp"
        android:layout_height="wrap_content">



    </androidx.cardview.widget.CardView>

</RelativeLayout>