<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/cvAddHouses"

        android:backgroundTint="#4CAF50"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        app:cardCornerRadius="30dp"
        android:layout_height="300dp">
        <LinearLayout
            android:weightSum="10"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.8">

                <TextView
                    android:id="@+id/txtTitleService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/serciesSystem_add_title"
                    android:textSize="24dp" />

            </LinearLayout>

            <LinearLayout
                android:weightSum="3.2"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:weightSum="2"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_weight="0.7"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/title1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/housesSystem_add_layout_title_name"
                            android:textSize="17dp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1">
                        <TextView
                            android:gravity="center|left"
                            android:text=":"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="17dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1.1"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:layout_height="match_parent">
                        <EditText
                            android:id="@+id/edtGetServiceName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:weightSum="2"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_weight="0.7"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/txtRoomPrice"
                            android:textSize="17dp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/serciesSystem_price_title"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1">
                        <TextView
                            android:gravity="center|left"
                            android:text=":"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="17dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1.1"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/edtGetServicePrice"
                            android:inputType="number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:weightSum="2"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_weight="0.7"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/txtNote"
                            android:textSize="17dp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/roomSystem_add_layout_note"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1">
                        <TextView
                            android:gravity="center|left"
                            android:text=":"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="17dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1.1"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:layout_height="match_parent">
                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/edtGetServiceNote"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </ScrollView>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="2.2">

                <Button
                    android:id="@+id/btnService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FF9800"
                    android:text="@string/housesSystem_add_layout_button_add"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FF9800"
                    android:text="@string/general_cancel"
                    android:textColor="@color/white" />
            </LinearLayout>









        </LinearLayout>





    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginTop="15dp"
        android:layout_below="@+id/cvAddHouses"
        android:backgroundTint="#F1D379"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        app:cardCornerRadius="30dp"
        android:layout_height="wrap_content">



    </androidx.cardview.widget.CardView>

</RelativeLayout>