<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical">
        <LinearLayout
            android:background="#4CAF50"
            android:layout_weight="0.7"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <LinearLayout
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imgBack"
                    android:src="@drawable/left_arrow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1.3"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginLeft="20dp"
                    android:gravity="center|left"
                    android:textSize="20dp"
                    android:text="@string/setting_title_main"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="10"
            android:orientation="vertical"
            android:layout_height="0dp"
            android:layout_weight="8.1">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <GridLayout
                    android:columnCount="1"
                    android:rowCount="3"
                    android:alignmentMode="alignMargins"
                    android:columnOrderPreserved="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvShareApp"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        android:layout_gravity="center"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp">
                        <LinearLayout
                            android:weightSum="2"
                            android:layout_width="350dp"
                            android:layout_height="100dp">
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.7">
                                <ImageView
                                    android:padding="10dp"
                                    android:src="@drawable/share"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"/>

                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="0dp"
                                android:gravity="center"
                                android:layout_height="match_parent"
                                android:layout_weight="1.3">
                                <TextView
                                    android:text="@string/setting_share"
                                    android:textStyle="bold"
                                    android:textSize="15dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>

                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvBilling"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        android:layout_gravity="center"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp">
                        <LinearLayout
                            android:weightSum="2"
                            android:layout_width="350dp"
                            android:layout_height="100dp">
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.7">
                                <ImageView
                                    android:src="@drawable/advances"
                                    android:padding="10dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"/>

                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="0dp"
                                android:gravity="center"
                                android:layout_height="match_parent"
                                android:layout_weight="1.3">
                                <TextView
                                    android:text="@string/setting_advance"
                                    android:textStyle="bold"
                                    android:textSize="15dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>

                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvTimetable"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        app:cardCornerRadius="12dp">
                        <LinearLayout
                            android:layout_width="350dp"
                            android:layout_height="100dp"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.7">

                                <ImageView
                                    android:padding="10dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:src="@drawable/icon_timetable" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1.3">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:text="@string/setting_timetable"
                                    android:textStyle="bold"
                                    android:textSize="15dp"
                                    android:typeface="monospace" />
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <!--                    <androidx.cardview.widget.CardView-->
                    <!--                        android:id="@+id/passwordSetting"-->
                    <!--                        android:layout_columnWeight="1"-->
                    <!--                        android:layout_rowWeight="1"-->
                    <!--                        android:layout_gravity="center"-->
                    <!--                        app:cardCornerRadius="12dp"-->
                    <!--                        android:layout_margin="12dp">-->
                    <!--                        <LinearLayout-->
                    <!--                            android:weightSum="2"-->
                    <!--                            android:layout_width="350dp"-->
                    <!--                            android:layout_height="100dp">-->
                    <!--                            <LinearLayout-->
                    <!--                                android:layout_width="0dp"-->
                    <!--                                android:layout_height="match_parent"-->
                    <!--                                android:layout_weight="0.7">-->
                    <!--                                <ImageView-->
                    <!--                                    android:src="@drawable/lock"-->
                    <!--                                    android:padding="15dp"-->
                    <!--                                    android:layout_width="match_parent"-->
                    <!--                                    android:layout_height="match_parent"/>-->

                    <!--                            </LinearLayout>-->
                    <!--                            <LinearLayout-->
                    <!--                                android:layout_width="0dp"-->
                    <!--                                android:gravity="center"-->
                    <!--                                android:layout_height="match_parent"-->
                    <!--                                android:layout_weight="1.3">-->
                    <!--                                <TextView-->
                    <!--                                    android:text="@string/setting_password"-->
                    <!--                                    android:textStyle="bold"-->
                    <!--                                    android:textSize="20dp"-->
                    <!--                                    android:layout_width="wrap_content"-->
                    <!--                                    android:layout_height="wrap_content"/>-->

                    <!--                            </LinearLayout>-->
                    <!--                        </LinearLayout>-->
                    <!--                    </androidx.cardview.widget.CardView>-->

                </GridLayout>
            </ScrollView>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>